--- a/todolist/tasks/templates/tasks/tasks.html
+++ b/todolist/tasks/templates/tasks/tasks.html
@@ -6,5 +6,19 @@
 
 {% block content %}
     <h1>To Do List</h1>
+    <form method="POST">
+        {% csrf_token %}
+        <input type="text" name="name" placeholder="Add new task">
+        <input type="textarea" name="description" placeholder="Describe your task">
+        <button type="submit">Add Task</button>
+    </form>
+
+    <ul>
+        {% for task in tasks %}
+        <li>{{ task.name }} - {{ task.description }}</li>
+        {% empty %}
+            <li>No Tasks Available</li>
+        {% endfor %}
+    </ul>
 
 {% endblock %}
